--- a/index.html
+++ b/index.html
@@ -2,93 +2,231 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Magioke Platform Select</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="https://magioke.github.io/0/fa7d9e2c-3c1fadb2-bce4fde9-cafe8abe-dc3defab/logo/icon_2.png" type="image/png">
-  <title>Magioke</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@700&display=swap');
+
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
       min-height: 100vh;
-      background: linear-gradient(to bottom right, #b806ff, #ff1fb4);
+      background: linear-gradient(135deg, #ff69b4, #8a2be2);
+      font-family: 'Montserrat', Arial, sans-serif;
       display: flex;
       flex-direction: column;
+      align-items: center;
+      overflow: hidden;
     }
 
-    .top-bar {
-      width: 100%;
-      height: 90px;
-      background-color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    .bar {
       position: fixed;
       top: 0;
-      z-index: 1000;
+      left: 0;
+      width: 100vw;
+      height: 78px;
+      background: #fff;
+      box-shadow: 0 1px 8px rgba(0,0,0,0.10);
+      z-index: 10;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
-    .top-bar img {
-      height: 70px;
-      max-height: 80%;
-      max-width: 90%;
+    .bar-logo {
+      height: 68px;
+      max-width: 92vw;
+      pointer-events: none;
+      user-select: none;
+      filter: drop-shadow(0 2px 10px rgba(0,0,0,0.13));
+      display: block;
     }
 
-    .content {
-      margin-top: 90px; /* Adjust for fixed top bar */
-      flex: 1;
+    .platform-section {
+      width: 100%;
+      margin-top: 150px;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      text-align: center;
-      color: white;
-      padding: 20px;
     }
 
-    .content h1 {
-      font-size: 2.5em;
-      margin-bottom: 20px;
+    .platform-buttons {
+      display: flex;
+      flex-direction: row;
+      gap: 36px;
+      align-items: flex-start;
+      justify-content: center;
+      width: 100%;
+      flex-wrap: wrap;
     }
 
-    .content p {
+    .platform-btn-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 200px;
+      max-width: 90vw;
+      margin-bottom: 10px;
+    }
+
+    .platform-btn {
+      width: 100%;
+      padding: 26px 0;
+      font-size: 1.6em;
+      background: #fff;
+      color: #222;
+      border: none;
+      border-radius: 18px;
+      box-shadow: 0 4px 18px rgba(0,0,0,0.10);
+      cursor: pointer;
+      transition:
+        transform 0.21s cubic-bezier(.42,2.01,.52,.98),
+        background 0.19s,
+        color 0.19s;
+      outline: none;
+      letter-spacing: 1px;
+      font-family: 'Montserrat', Arial, sans-serif;
+      font-weight: 700;
+    }
+    .platform-btn:hover, .platform-btn:focus {
+      background: #f3e8ff;
+      color: #8a2be2;
+      transform: scale(1.07);
+      z-index: 2;
+    }
+
+    .platform-btn-separator {
+      margin-top: 10px;
+      width: 70%;
+      height: 2px;
+      background: #d6d6d6;
+      border: none;
+      border-radius: 1px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+    }
+
+    .magioke-desc {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100vw;
+      background: #fff;
+      color: #222;
+      font-family: 'Roboto', Arial, sans-serif;
       font-size: 1.3em;
+      font-weight: 700;
+      padding: 22px 6vw 18px 6vw;
+      text-align: center;
+      box-shadow: 0 -1px 14px 0 rgba(0,0,0,0.07);
+      z-index: 20;
+      line-height: 1.5;
+      margin: 0;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+      word-break: break-word;
+      box-sizing: border-box;
+      max-width: 100vw;
+      overflow-wrap: break-word;
     }
 
-    /* Responsive tweaks */
+    @media (max-width: 900px) {
+      .bar {
+        height: 54px;
+      }
+      .bar-logo {
+        height: 40px;
+      }
+      .platform-section {
+        margin-top: 80px;
+      }
+      .platform-buttons {
+        gap: 14px;
+      }
+      .platform-btn-container {
+        width: 110px;
+      }
+      .platform-btn {
+        font-size: 1em;
+        padding: 12px 0;
+      }
+      .magioke-desc {
+        font-size: 1.05em;
+        padding: 12px 4vw 10px 4vw;
+      }
+    }
+
     @media (max-width: 600px) {
-      .top-bar {
-        height: 70px;
+      .bar {
+        height: 36px;
       }
-
-      .top-bar img {
-        height: 50px;
+      .bar-logo {
+        height: 26px;
       }
-
-      .content h1 {
-        font-size: 2em;
+      .platform-section {
+        margin-top: 48px;
       }
-
-      .content p {
-        font-size: 1.1em;
+      .platform-buttons {
+        gap: 6px;
+        flex-wrap: wrap;
       }
-
-      .content {
-        margin-top: 70px;
+      .platform-btn-container {
+        width: 70vw;
+        min-width: 90px;
+      }
+      .platform-btn {
+        font-size: .9em;
+        padding: 7px 0;
+      }
+      .magioke-desc {
+        font-size: 0.98em;
+        padding: 10px 2vw 8px 2vw;
       }
     }
   </style>
+  <script>
+    window.onload = function() {
+      // Add event listeners for each button
+      document.getElementById('btn-mobile').onclick = function() {
+        window.location.href = 'https://magioke.github.io/0/download/mobile/magioke.apk';
+      };
+      document.getElementById('btn-pc').onclick = function() {
+        window.location.href = 'https://magioke.github.io/0/fa7d9e2c-3c1fadb2-bce4fde9-cafe8abe-dc3defab/ls/pc/';
+      };
+      document.getElementById('btn-smarttv').onclick = function() {
+        window.location.href = 'https://magioke.github.io/0/fa7d9e2c-3c1fadb2-bce4fde9-cafe8abe-dc3defab/ls/tv/';
+      };
+      document.getElementById('btn-androidtv').onclick = function() {
+        window.location.href = 'https://magioke.github.io/0/download/android_tv/magioke_tv.apk';
+      };
+    };
+  </script>
 </head>
 <body>
-
-  <div class="top-bar">
-    <img src="https://magioke.github.io/0/fa7d9e2c-3c1fadb2-bce4fde9-cafe8abe-dc3defab/logo/texticon_2.png" alt="Logo">
+  <div class="bar">
+    <img class="bar-logo" src="https://magioke.github.io/0/fa7d9e2c-3c1fadb2-bce4fde9-cafe8abe-dc3defab/logo/texticon_2.png" alt="Magioke Logo">
   </div>
-
-  <div class="content">
-    <h1>Website under Construction</h1>
-    <p>Stay tuned for Magioke!</p>
+  <div class="platform-section">
+    <div class="platform-buttons">
+      <div class="platform-btn-container">
+        <button id="btn-mobile" class="platform-btn">MOBILE</button>
+        <div class="platform-btn-separator"></div>
+      </div>
+      <div class="platform-btn-container">
+        <button id="btn-pc" class="platform-btn">PC</button>
+        <div class="platform-btn-separator"></div>
+      </div>
+      <div class="platform-btn-container">
+        <button id="btn-smarttv" class="platform-btn">SMART TV</button>
+        <div class="platform-btn-separator"></div>
+      </div>
+      <div class="platform-btn-container">
+        <button id="btn-androidtv" class="platform-btn">ANDROID TV</button>
+        <div class="platform-btn-separator"></div>
+      </div>
+    </div>
   </div>
-
+  <div class="magioke-desc">
+    Magioke is a fascinating mix of music, performance, and magic. Participants not only sing their favorite songs like they do in regular karaoke, but they are also surrounded by a magical atmosphere with stunning visual effects, fantasy-themed backdrops, and interactive elements that make every performance a spellbinding experience unlike any other.
+  </div>
 </body>
 </html>
